# HW_2_05

./: README.md  index.html  main.js  main.py  pyproject.toml  server.py
