[tool.poetry]
name = "hw-2-05"
version = "0.1.0"
description = ""
authors = ["Vitalii Bielimov <vbit2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
